--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "d3": "^4.11.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "famfamfam-flags": "^1.0.0",
+    "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "jquery-sparkline": "^2.4.0",
@@ -60,7 +61,9 @@
     "ngx-chips": "^1.4.6",
     "ngx-color-picker": "^4.4.0",
     "ngx-echarts": "^1.2.4",
+    "ngx-filesaver": "^8.0.0",
     "ngx-quill-editor": "^2.2.2",
+    "ngx-sortable": "^1.0.1",
     "peity": "^3.2.1",
     "rxjs": "^5.4.2",
     "screenfull": "^3.3.1",
